# Engenharia-de-Software

./: README.md
.github/workflows/: python-poetry-app.yml
analise_dados/: README.md  pyproject.toml
analise_dados/src/poetry_demo/: analise_dados.py
analise_dados/tests/: analise_dados_test.py
poetry-demo/: main.py
request_get/: main.py  pyproject.toml
request_get/src/poetry_demo/: analise_dados.py
